--- a/RPSLS/RPSLS.csproj
+++ b/RPSLS/RPSLS.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Computer.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Gestures.cs" />
     <Compile Include="Human.cs" />
     <Compile Include="Players.cs" />
