--- a/RPSLS/RPSLS.csproj
+++ b/RPSLS/RPSLS.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CalculateWinLoss.cs" />
     <Compile Include="Computer.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Human.cs" />
